// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/SingleImageView permalink preview should render with permalink styling if in permalink 1`] = `
<div>
  <div
    class="file-view--single image-permalink"
  >
    <div
      class="file__image"
    >
      <div
        class="image-header image-header--expanded"
      >
        <button
          aria-label="Toggle Embed Visibility"
          class="style--none single-image-view__toggle"
          data-expanded="true"
        >
          <svg
            fill="currentColor"
            height="16"
            version="1.1"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7,10L12,15L17,10H7Z"
            />
          </svg>
        </button>
      </div>
      <div
        class="image-container image-permalink image-container--small"
        data-expanded="true"
        style="min-width: 50px; min-height: 50px;"
      >
        <div
          class="image-loaded image-permalink"
        >
          <div
            class="image-loading__container  single-image-view__image"
            style="width: 350px; height: 200px; min-width: 50px; min-height: 50px;"
          >
            <div
              style="position: absolute; top: 50%; transform: translate(-50%, -50%); left: 50%;"
            >
              <div
                class="file__image-loading"
              >
                <span
                  class="LoadingSpinner"
                  data-testid="loadingSpinner"
                  id="loadingSpinner"
                >
                  <span
                    class="fa fa-spinner fa-fw fa-pulse spinner"
                    title="Loading Icon"
                  />
                </span>
                <span
                  class="loader-percent"
                />
              </div>
            </div>
            <svg
              style="max-height: 200px; max-width: 350px; vertical-align: middle;"
              viewBox="0 0 350 200"
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>
          <div
            class="file-preview__button"
            style="display: none;"
          >
            <div
              class="small-image__container"
              style="min-width: 50px; min-height: 50px;"
            >
              <figure
                aria-label="file thumbnail name"
                class="image-loaded-container"
                role="button"
                tabindex="0"
              >
                <img
                  aria-hidden="true"
                  aria-label="file thumbnail name"
                  class=" single-image-view__image small-image--inside-container"
                  src="/api/v4/files/file_info_id/preview"
                  tabindex="-1"
                />
              </figure>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SingleImageView should match snapshot 1`] = `
<div>
  <div
    class="file-view--single"
  >
    <div
      class="file__image"
    >
      <div
        class="image-header image-header--expanded"
      >
        <button
          aria-label="Toggle Embed Visibility"
          class="style--none single-image-view__toggle"
          data-expanded="true"
        >
          <svg
            fill="currentColor"
            height="16"
            version="1.1"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7,10L12,15L17,10H7Z"
            />
          </svg>
        </button>
      </div>
      <div
        class="image-container image-container--small"
        data-expanded="true"
        style="min-width: 50px; min-height: 50px;"
      >
        <div
          class="image-loaded"
        >
          <div
            class="image-loading__container  single-image-view__image"
            style="width: 350px; height: 200px; min-width: 50px; min-height: 50px;"
          >
            <div
              style="position: absolute; top: 50%; transform: translate(-50%, -50%); left: 50%;"
            >
              <div
                class="file__image-loading"
              >
                <span
                  class="LoadingSpinner"
                  data-testid="loadingSpinner"
                  id="loadingSpinner"
                >
                  <span
                    class="fa fa-spinner fa-fw fa-pulse spinner"
                    title="Loading Icon"
                  />
                </span>
                <span
                  class="loader-percent"
                />
              </div>
            </div>
            <svg
              style="max-height: 200px; max-width: 350px; vertical-align: middle;"
              viewBox="0 0 350 200"
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>
          <div
            class="file-preview__button"
            style="display: none;"
          >
            <div
              class="small-image__container"
              style="min-width: 50px; min-height: 50px;"
            >
              <figure
                aria-label="file thumbnail name"
                class="image-loaded-container"
                role="button"
                tabindex="0"
              >
                <img
                  aria-hidden="true"
                  aria-label="file thumbnail name"
                  class=" single-image-view__image small-image--inside-container"
                  src="/api/v4/files/file_info_id/preview"
                  tabindex="-1"
                />
              </figure>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SingleImageView should match snapshot 2`] = `
<div>
  <div
    class="file-view--single"
  >
    <div
      class="file__image"
    >
      <div
        class="image-header image-header--expanded"
      >
        <button
          aria-label="Toggle Embed Visibility"
          class="style--none single-image-view__toggle"
          data-expanded="true"
        >
          <svg
            fill="currentColor"
            height="16"
            version="1.1"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7,10L12,15L17,10H7Z"
            />
          </svg>
        </button>
      </div>
      <div
        class="image-container image-container--small"
        data-expanded="true"
        style="min-width: 50px; min-height: 50px;"
      >
        <div
          class="image-loaded image-fade-in"
        >
          <div
            class="file-preview__button"
            style="display: flex;"
          >
            <div
              class="small-image__container"
              style="min-width: 50px; min-height: 50px;"
            >
              <figure
                aria-label="file thumbnail name"
                class="image-loaded-container"
                role="button"
                tabindex="0"
              >
                <img
                  aria-hidden="true"
                  aria-label="file thumbnail name"
                  class=" single-image-view__image small-image--inside-container"
                  src="/api/v4/files/file_info_id/preview"
                  tabindex="-1"
                />
              </figure>
            </div>
            <span
              class="image-preview-utility-buttons-container image-preview-utility-buttons-container--small-image image-preview-utility-buttons-container--small-image-no-copy-button"
            >
              <a
                aria-label="Download"
                class="style--none size-aware-image__download"
                download=""
                href="/api/v4/files/file_info_id"
                location="image_utility_buttons"
                rel="noopener noreferrer"
                role="button"
                target="_blank"
              >
                <svg
                  class="style--none"
                  fill="currentColor"
                  height="20"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
                  />
                </svg>
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SingleImageView should match snapshot, SVG image 1`] = `
<div>
  <div
    class="file-view--single"
  >
    <div
      class="file__image"
    >
      <div
        class="image-header image-header--expanded"
      >
        <button
          aria-label="Toggle Embed Visibility"
          class="style--none single-image-view__toggle"
          data-expanded="true"
        >
          <svg
            fill="currentColor"
            height="16"
            version="1.1"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7,10L12,15L17,10H7Z"
            />
          </svg>
        </button>
      </div>
      <div
        class="image-container image-container--small"
        data-expanded="true"
        style="min-width: 50px; min-height: 50px;"
      >
        <div
          class="image-loaded svg"
          style="width: 100%;"
        >
          <div
            class="image-loading__container  single-image-view__image"
            style="width: 350px; height: 200px; min-width: 50px; min-height: 50px;"
          >
            <div
              style="position: absolute; top: 50%; transform: translate(-50%, -50%); left: 50%;"
            >
              <div
                class="file__image-loading"
              >
                <span
                  class="LoadingSpinner"
                  data-testid="loadingSpinner"
                  id="loadingSpinner"
                >
                  <span
                    class="fa fa-spinner fa-fw fa-pulse spinner"
                    title="Loading Icon"
                  />
                </span>
                <span
                  class="loader-percent"
                />
              </div>
            </div>
            <svg
              style="max-height: 200px; max-width: 350px; vertical-align: middle;"
              viewBox="0 0 350 200"
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>
          <div
            class="file-preview__button"
            style="display: none;"
          >
            <div
              class="small-image__container"
              style="min-width: 50px; min-height: 50px;"
            >
              <figure
                aria-label="file thumbnail name_svg"
                class="image-loaded-container"
                role="button"
                tabindex="0"
              >
                <img
                  aria-hidden="true"
                  aria-label="file thumbnail name_svg"
                  class=" single-image-view__image small-image--inside-container"
                  src="/api/v4/files/svg_file_info_id/preview"
                  style="width: 100%; height: auto;"
                  tabindex="-1"
                />
              </figure>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SingleImageView should match snapshot, SVG image 2`] = `
<div>
  <div
    class="file-view--single"
  >
    <div
      class="file__image"
    >
      <div
        class="image-header image-header--expanded"
      >
        <button
          aria-label="Toggle Embed Visibility"
          class="style--none single-image-view__toggle"
          data-expanded="true"
        >
          <svg
            fill="currentColor"
            height="16"
            version="1.1"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7,10L12,15L17,10H7Z"
            />
          </svg>
        </button>
      </div>
      <div
        class="image-container image-container--small"
        data-expanded="true"
        style="min-width: 50px; min-height: 50px;"
      >
        <div
          class="image-loaded image-fade-in svg"
          style="width: 100%;"
        >
          <div
            class="file-preview__button"
            style="display: flex;"
          >
            <div
              class="small-image__container"
              style="min-width: 50px; min-height: 50px;"
            >
              <figure
                aria-label="file thumbnail name_svg"
                class="image-loaded-container"
                role="button"
                tabindex="0"
              >
                <img
                  aria-hidden="true"
                  aria-label="file thumbnail name_svg"
                  class=" single-image-view__image small-image--inside-container"
                  src="/api/v4/files/svg_file_info_id/preview"
                  style="width: 100%; height: auto;"
                  tabindex="-1"
                />
              </figure>
            </div>
            <span
              class="image-preview-utility-buttons-container image-preview-utility-buttons-container--small-image image-preview-utility-buttons-container--small-image-no-copy-button"
            >
              <a
                aria-label="Download"
                class="style--none size-aware-image__download"
                download=""
                href="/api/v4/files/svg_file_info_id"
                location="image_utility_buttons"
                rel="noopener noreferrer"
                role="button"
                target="_blank"
              >
                <svg
                  class="style--none"
                  fill="currentColor"
                  height="20"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
                  />
                </svg>
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/SingleImageView should set loaded state on callback of onImageLoaded on SizeAwareImage component 1`] = `
<div>
  <div
    class="file-view--single"
  >
    <div
      class="file__image"
    >
      <div
        class="image-header image-header--expanded"
      >
        <button
          aria-label="Toggle Embed Visibility"
          class="style--none single-image-view__toggle"
          data-expanded="true"
        >
          <svg
            fill="currentColor"
            height="16"
            version="1.1"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7,10L12,15L17,10H7Z"
            />
          </svg>
        </button>
      </div>
      <div
        class="image-container image-container--small"
        data-expanded="true"
        style="min-width: 50px; min-height: 50px;"
      >
        <div
          class="image-loaded image-fade-in"
        >
          <div
            class="file-preview__button"
            style="display: flex;"
          >
            <div
              class="small-image__container"
              style="min-width: 50px; min-height: 50px;"
            >
              <figure
                aria-label="file thumbnail name"
                class="image-loaded-container"
                role="button"
                tabindex="0"
              >
                <img
                  aria-hidden="true"
                  aria-label="file thumbnail name"
                  class=" single-image-view__image small-image--inside-container"
                  src="/api/v4/files/file_info_id/preview"
                  tabindex="-1"
                />
              </figure>
            </div>
            <span
              class="image-preview-utility-buttons-container image-preview-utility-buttons-container--small-image image-preview-utility-buttons-container--small-image-no-copy-button"
            >
              <a
                aria-label="Download"
                class="style--none size-aware-image__download"
                download=""
                href="/api/v4/files/file_info_id"
                location="image_utility_buttons"
                rel="noopener noreferrer"
                role="button"
                target="_blank"
              >
                <svg
                  class="style--none"
                  fill="currentColor"
                  height="20"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
                  />
                </svg>
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
